Bug 309574 - Autosave only triggered on first change
Summary: Autosave only triggered on first change
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-05 09:49 UTC by Dag Andersen
Modified: 2012-11-06 08:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2012-11-05 09:49:24 UTC
After autosave has been performed once, it is never done again even if new modification is done to the document.

Reproducible: Always
Comment 1 Dag Andersen 2012-11-06 08:17:27 UTC
Git commit 81116027d9012c411841d52113b8ad315c74cf8a by Dag Andersen.
Committed on 06/11/2012 at 09:14.
Pushed by danders into branch 'calligra/2.5'.

Fix: Autosave only triggered on first change.
FIXED_IN: 2.5.5
Rview request 107206

M  +4    -4    libs/main/KoDocument.cpp
M  +3    -6    libs/main/KoDocument.h

http://commits.kde.org/calligra/81116027d9012c411841d52113b8ad315c74cf8a