Fix: Autosave only triggered on first change.

BUG:309574
FIXED_IN: 2.5.5
Rview request 107206