libs/main/KoDocument.h
@@ -759,12 +759,6 @@ public slots:
     virtual void setModified(bool _mod);
 
     /**
-     * Called by the undo stack when the document is saved or all changes has been undone
-     * @param clean if the document's undo stack is clean or not
-     */
-    virtual void setDocumentClean(bool clean);
-
-    /**
      * Set the output stream to report profile information to.
      */
     void setProfileStream(QTextStream *profilestream);
@@ -957,6 +951,9 @@ private slots:
     void slotAutoSave();
     void slotStarted(KIO::Job*);
     void startCustomDocument();
+
+    /// Called by the undo stack when undo or redo is called
+    void slotUndoStackIndexChanged(int idx);
 
 private:
 
